--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ model/3c98a.model
 *.model
 dataset/tilia_cordata/tilia_cordata_005.png
 dataset/tilia_cordata/tilia_cordata_153.png
+attempts/token.py
