--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ model/3c98a.model
 dataset/tilia_cordata/tilia_cordata_005.png
 dataset/tilia_cordata/tilia_cordata_153.png
 attempts/token.py
+attempts/tkn.txt
